// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ButtonGroup
    isBlock={false}
    isMultiSelect={false}
    selectedKeys={Array []}
  >
    <div
      className="button-group orion-fusion-theme"
      role="none"
    >
      <ButtonGroupButton
        aria-checked={null}
        aria-pressed={false}
        className=""
        index={0}
        isDisabled={false}
        key="1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        text="Button 1"
      >
        <Button
          aria-checked={null}
          aria-pressed={false}
          className="button-group-button orion-fusion-theme"
          data-terra-button-group-button={true}
          index={0}
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          text="Button 1"
          type="button"
          variant="neutral"
        >
          <button
            aria-checked={null}
            aria-disabled={false}
            aria-label="Button 1"
            aria-pressed={false}
            className="button neutral orion-fusion-theme button-group-button orion-fusion-theme"
            data-terra-button-group-button={true}
            disabled={false}
            index={0}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="button"
            title="Button 1"
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span>
                Button 1
              </span>
            </span>
          </button>
        </Button>
      </ButtonGroupButton>
      <ButtonGroupButton
        aria-checked={null}
        aria-pressed={false}
        className=""
        index={1}
        isDisabled={false}
        key="2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        text="Button 2"
      >
        <Button
          aria-checked={null}
          aria-pressed={false}
          className="button-group-button orion-fusion-theme"
          data-terra-button-group-button={true}
          index={1}
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          text="Button 2"
          type="button"
          variant="neutral"
        >
          <button
            aria-checked={null}
            aria-disabled={false}
            aria-label="Button 2"
            aria-pressed={false}
            className="button neutral orion-fusion-theme button-group-button orion-fusion-theme"
            data-terra-button-group-button={true}
            disabled={false}
            index={1}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="button"
            title="Button 2"
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span>
                Button 2
              </span>
            </span>
          </button>
        </Button>
      </ButtonGroupButton>
    </div>
  </ButtonGroup>
</ThemeContextProvider>
`;

exports[`should apply correct role for multiSelect button group 1`] = `
<div
  className="button-group"
  role="none"
>
  <ButtonGroupButton
    aria-checked={false}
    aria-pressed={false}
    className=""
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={false}
    aria-pressed={false}
    className=""
    index={1}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    text="Button 2"
  />
</div>
`;

exports[`should apply correct role for single select button group 1`] = `
<div
  className="button-group"
  role="radiogroup"
>
  <ButtonGroupButton
    aria-checked={false}
    aria-pressed={false}
    className=""
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="radio"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={false}
    aria-pressed={false}
    className=""
    index={1}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="radio"
    text="Button 2"
  />
</div>
`;

exports[`should only render enabled buttons as toggle buttons 1`] = `
<div
  className="button-group"
  role="none"
>
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={true}
    className="is-selected"
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={1}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={null}
    className=""
    index={2}
    isDisabled={true}
    key="dis"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Disabled Button"
  />
</div>
`;

exports[`should render a block button group with children 1`] = `
<div
  className="button-group is-block"
  role="none"
>
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={1}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={2}
    isDisabled={false}
    key="3"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 3"
  />
</div>
`;

exports[`should render a button group with children 1`] = `
<div
  className="button-group"
  role="none"
>
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
</div>
`;

exports[`should render a button group with children selected 1`] = `
<div
  className="button-group"
  role="none"
>
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={true}
    className="is-selected"
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={1}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
</div>
`;

exports[`should render an empty component 1`] = `
<div
  className="button-group"
  role="none"
/>
`;

exports[`should select a button 1`] = `
<div
  className="button-group"
  role="none"
>
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={1}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
</div>
`;

exports[`should select a button 2`] = `
<div
  className="button-group"
  role="none"
>
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={0}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={null}
    aria-pressed={false}
    className=""
    index={1}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
</div>
`;
